[gd_scene load_steps=5 format=3 uid="uid://dm57fwp48yttj"]

[ext_resource type="Script" path="res://screens/game_screen/tutorial/tutorial_popup/tutorial_popup.gd" id="1_ma753"]
[ext_resource type="Texture2D" uid="uid://bh3a33ibhyye4" path="res://screens/game_screen/tutorial/tutorial_popup/assets/border.PNG" id="2_yl0wj"]
[ext_resource type="Texture2D" uid="uid://dl5o03oly022o" path="res://screens/game_screen/tutorial/tutorial_popup/assets/next_button.png" id="4_0j1rr"]
[ext_resource type="Texture2D" uid="uid://cl38hqx7e5unu" path="res://screens/game_screen/tutorial/tutorial_popup/assets/next_button_selected.png" id="5_h7rqy"]

[node name="TutorialPopup" type="Control"]
layout_mode = 3
anchor_right = 0.613
anchor_bottom = 0.867
offset_right = 0.039917
offset_bottom = -0.360046
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ma753")

[node name="BoxBorderTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 1178.0
offset_bottom = 936.0
texture = ExtResource("2_yl0wj")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 32.0
offset_right = 1140.0
offset_bottom = 899.0

[node name="CurrentPageLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 436.0
offset_top = 288.0
offset_right = 476.0
offset_bottom = 357.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="ContinueButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 442.0
offset_top = 938.0
offset_right = 748.0
offset_bottom = 1063.0
texture_normal = ExtResource("4_0j1rr")
texture_pressed = ExtResource("5_h7rqy")
texture_hover = ExtResource("5_h7rqy")

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
